WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249902
Fix CSSSelector copy constructor bug
https://bugs.webkit.org/show_bug.cgi?id=249902
Summary
Fix CSSSelector copy constructor bug
Matthieu Dubet
Reported
2022-12-27 01:49:06 PST
A typo in the copy constructor of CSSSelector ("if" instead of "if else") introduced in this commit
https://github.com/WebKit/WebKit/commit/70f39545176202167919e3ed0d88163bbcb9f786
can sometimes create buggy objects.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-27 01:49:33 PST
<
rdar://problem/103723429
>
Matthieu Dubet
Comment 2
2022-12-27 01:52:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8047
EWS
Comment 3
2022-12-27 05:04:47 PST
Committed
258339@main
(a7844f97ea72): <
https://commits.webkit.org/258339@main
> Reviewed commits have been landed. Closing PR #8047 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug