Cherry-pick 258339@main (a7844f97ea72). https://bugs.webkit.org/show_bug.cgi?id=249902

Fix CSSSelector copy constructor bug
    https://bugs.webkit.org/show_bug.cgi?id=249902
    rdar://103723429

    Reviewed by Tim Nguyen.

    Typo ("if" instead of "if else") which in some rare
    cases can write garbage in the Data union.

    * Source/WebCore/css/CSSSelector.h:
    (WebCore::CSSSelector::CSSSelector):

    Canonical link: https://commits.webkit.org/258339@main